--- a/VR_Racquetball.uproject
+++ b/VR_Racquetball.uproject
@@ -3,6 +3,16 @@
 	"EngineAssociation": "4.19",
 	"Category": "",
 	"Description": "",
+	"Modules": [
+		{
+			"Name": "VR_Racquetball",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
+		}
+	],
 	"TargetPlatforms": [
 		"PS4",
 		"WindowsNoEditor"
