--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=784FF1F44AB8460C744FD6BDA0DC8714
 ProjectName=Virtual Reality BP Game Template
+bStartInVR=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Development
